# tv-commander

./: CMakeLists.txt  build-appimage.sh  build-host.sh  commander.cpp  config.cpp  config.h  config_def.h  def.h  dialog.cpp  error_dialog.h  fileutils.cpp  fileutils.h  icons.h  image_viewer.cpp  image_viewer.h  keyboard.cpp  main.cpp  palette.cpp  palette.h  panel.cpp  panel.h  resourceManager.cpp  resourceManager.h  screen.cpp  screen.h  sdl_ttf_multifont.cpp  sdlutils.cpp  sdlutils.h  text_edit.cpp  text_edit.h  text_viewer.cpp  window.cpp
.github/workflows/: linux_x86_64_appimage.yml
packaging/appimage/: AppRun
res/: README.md
